# NetScope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  comprehensive project specification.md  netscope.example.toml  rust-toolchain.toml
.github/workflows/: ci.yml
benches/: hot_path.rs
docs/: anomaly-detection.md  cli-reference.md  configuration.md  development.md  exports.md  flow-tracking.md  getting-started.md  index.md  perf-validation.md  performance.md  pipeline.md  troubleshooting.md  usage.md  web-dashboard.md
scripts/perf/: perf-throughput.toml  perf-web.toml  validate-throughput.sh  validate-web.sh  validate.sh
src/: cli.rs  config.rs  display.rs  flow.rs  jsonl.rs  lib.rs  main.rs  memory.rs  metrics.rs  packet_format.rs
src/analysis/: anomaly.rs
src/capture/: engine.rs  mod.rs
src/flow/: export.rs  key.rs
src/pipeline/: aggregator.rs  mod.rs  pool.rs  router.rs  top_flows.rs  worker.rs
src/protocol/: dns.rs  ethernet.rs  icmp.rs  icmpv6.rs  ipv4.rs  ipv6.rs  loopback.rs  mod.rs  sll.rs  tcp.rs  tls.rs  udp.rs
src/web/: messages.rs  mod.rs  packet_store.rs  server.rs
tests/: memory_scale_1m.rs  offline_read_pcap.rs  pcap_rotation.rs
web/static/: index.html
